<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_workout">Mulai Workout</string>
    <string name="label_today_score">Today Score</string>
    <string name="label_this_week_score">This Week Score</string>
    <string name="label_list_activities">Daftar kegiatan telah dilakukan:</string>
    <string name="label_50_persen">50%</string>
    <string name="label_70_persen">70%</string>

</resources>
